# vuln-remediation

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  github_issues.md  pyproject.toml  requirements.txt
src/vuln_remediation/: __init__.py  config.py  devin_client.py  github_client.py  logging.py  main.py  models.py  notifier.py  orchestrator.py  persistence.py
src/vuln_remediation/agents/: __init__.py  base.py  devin.py
src/vuln_remediation/notifications/: __init__.py  base.py  github.py
src/vuln_remediation/persistence/: __init__.py  base.py  json_file.py
src/vuln_remediation/sources/: __init__.py  base.py  github.py
src/vuln_remediation/static/: dashboard.html
tests/: test_orchestrator.py  test_persistence.py
